--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ body {
   padding-right: 17px;
   max-width: 830px;
   width: 50%;
+  margin-right: 40px;
 }
 
 .input-search {
@@ -119,7 +120,7 @@ body {
 
 .sidebar {
   position: fixed;
-  width: 18.5%;
+  width: 200px;
   left: 0;
   top: 114px;
   height: calc(100% - 114px);
@@ -132,8 +133,9 @@ body {
   width: 100%;
   height: 400px;
   margin-top: 85px;
-  padding-left: 20%;
+  padding-left: 250px;
   padding-top: 29px;
+  padding-right: 70px;
 }
 
 .nav-menu {
@@ -209,21 +211,34 @@ body {
   margin-left: 20px;
 }
 
-.video-card {
-  width: 250px;
+.channel-recom {
+  margin-left: 20px;
+  display: flex;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 16px;
+  color: #c2c2c2;
 }
 
 .video-thumb {
-  width: 250px;
+  width: 100%;
   height: 150px;
   overflow: hidden;
   border-radius: 14px;
   position: relative;
 }
 
+.video-thumb-1 {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  border-radius: 14px;
+  position: relative;
+}
+
 .thumbnail {
-  width: 250px;
-  height: 150px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -281,11 +296,144 @@ body {
 }
 
 .slider-buttons {
+  margin-left: 40px;
   position: absolute;
   right: 13.5%;
-  top: 15px;
+  top: 11px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 66px;
+}
+
+.slider-buttons-1 {
+  margin-left: 40px;
+  position: absolute;
+  right: 13.5%;
+  top: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 66px;
+}
+
+.icon-subscribe {
+  cursor: pointer;
+  width: 154px;
+  height: 40px;
+  margin-left: 40px;
+  position: absolute;
+  right: 24%;
+  top: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mobile-sidebar {
+  display: none;
+}
+
+.mobile-search {
+  display: none;
+}
+
+@media (max-width: 860px) {
+  .icons {
+    display: none;
+  }
+  .user {
+    margin-left: auto;
+  }
+}
+@media (max-width: 1100px) {
+  .channel-recom {
+    display: none;
+  }
+}
+@media (max-width: 640px) {
+  .swiper-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .swiper-slide {
+    margin-bottom: 40px;
+  }
+  .video-thumb {
+    height: 300px;
+  }
+  .video-thumb-1 {
+    height: 300px;
+  }
+  .slider-buttons {
+    display: none;
+  }
+  .slider-buttons-1 {
+    display: none;
+  }
+  .channel-recom {
+    display: none;
+  }
+  .icon-subscribe {
+    right: 0;
+  }
+  .mobile-search {
+    display: block;
+    margin-left: auto;
+  }
+  .user {
+    margin-left: 20px;
+  }
+  .input-group {
+    position: fixed;
+    top: -100px;
+    left: 0;
+    opacity: 0;
+    width: 68%;
+    margin-left: 25px;
+    transition: top 0.2s;
+  }
+  .input-group.is-open {
+    opacity: 1;
+    top: 20px;
+  }
+  .menu-button {
+    display: none;
+  }
+  .sidebar {
+    display: none;
+  }
+  .content {
+    padding-left: 32px;
+  }
+  .mobile-sidebar {
+    display: block;
+    position: fixed;
+    z-index: 99;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+  }
+  .mobile-sidebar .nav-link {
+    display: flex;
+    flex-direction: column;
+  }
+  .mobile-sidebar .nav-menu {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 4px;
+    padding-bottom: 11px;
+    border-top: 1px solid #f1f1f1;
+  }
+  .nav-text {
+    margin-left: 0;
+    font-size: 10px;
+    line-height: 13px;
+  }
+  .nav-item {
+    margin-bottom: 0;
+  }
 }
